# spytti

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  spytti.service  spytti.toml
src/: audio.rs  config.rs  main.rs  spotify.rs  state.rs  ui.html  web.rs
tests/: web_api.rs
