[package]
name = "spytti"
version = "0.1.0"
edition = "2021"
description = "Minimal Spotify Connect daemon"

[features]
default = ["backend-rodio", "native-tls"]
backend-alsa = ["librespot/alsa-backend"]
backend-rodio = ["librespot/rodio-backend"]
native-tls = ["librespot/native-tls"]

[dependencies]
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev", default-features = false }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
hostname = "0.4"
futures-util = "0.3"
