[package]
name = "spytti"
version = "0.1.0"
edition = "2021"
description = "Minimal Spotify Connect daemon"

[features]
default = ["backend-rodio", "rustls", "zeroconf"]
backend-alsa = ["librespot/alsa-backend"]
backend-rodio = ["librespot/rodio-backend"]
zeroconf = ["librespot/with-libmdns"]
native-tls = ["librespot/native-tls"]
rustls = ["librespot/rustls-tls-native-roots"]

[dependencies]
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev", default-features = false }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
hostname = "0.4"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
toml = "0.8"
